tests/NormalTests/paczka1/fuzzy1/18702993.err
Error in line 1: t91NW2sC8j A249 9,9
Error in line 3: CWpsvw S844 6,7
Error in line 10: CWpsvw A249 53,6
Error in line 25: SXYn S399 33,04
Error in line 30: SXYn A919 75,4
Error in line 34: lFMvAlgcS S844 139,6
Error in line 23: t91NW2sC8j A919 81,2
Error in line 33: SXYn A249 45,4
